--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cross-env NODE_ENV=production webpack",
+    "build": "cross-env NODE_ENV=development webpack",
     "serve": "yarn && cross-env NODE_ENV=development webpack serve",
     "start": "yarn && cross-env NODE_ENV=development webpack serve",
     "dev": "cross-env NODE_ENV=development webpack serve"
@@ -33,7 +33,6 @@
     "url-loader": "^4.1.1",
     "vue-color": "^2.8.1",
     "vue-router": "^3.5.4",
-    "vuex": "^4.1.0",
     "vxe-table": "legacy",
     "xe-utils": "^3.5.7"
   },
@@ -59,11 +58,10 @@
     "vue-hot-reload-api": "^2.3.4",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^15.10.1",
-    "vue-router": "^2.8.1",
+    "vue-router": "^3.5.4",
     "vue-template-compiler": "^2.7.14",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1",
-    "vuex": "^3.5.0"
+    "webpack-dev-server": "^4.11.1"
   }
 }
